--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,25 @@
     <link rel="stylesheet" href="css/normaliza.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="header-list">
+            <img class="img-logo" src="img/Group.png" alt="Logo sayt" width="150" height="40">
+            <ul class="header-links">
+                <li class="header-items">Home</li>
+                <li class="header-items">Contact</li>
+                <li class="header-items">Privacy</li>
+            </ul>
+
+
+        </div>
+        <div class="about-contacts">
+            Contact Us
+        </div>
+    </header>
+
+
 </body>
+
 </html>
