--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
             Contact Us
         </div>
     </header>
-
+    <section class="store">
+            <div class="store__texts">
+                <h2 class="store__subtitle">Get it on Play Store and download on the App Store</h2>
+                <div class="store__box">
+                    <a href="#" class="store__link"><img src="img/store__link1.png" alt="store" width="132px" height="50px"></a>
+                    <a href="#" class="store__link"><img src="img/store__link2.png" alt="store" width="132" height="50px"></a>
+                </div>
+            </div>
+    </section>
 
 </body>
-
 </html>
